<resources>
    <string name="app_name">Naval Battle</string>
    <string name="key_btnPlay">Play</string>
    <string name="key_btnStats">Stats</string>
    <string name="key_btnExit">Exit</string>
    <string name="key_btnBack">Back</string>
    <string name="key_txtSelectMode">Select gamemode</string>
    <string name="key_btnVsComputer">Versus computer</string>
    <string name="key_btnVsHuman">Versus human</string>
    <string name="key_strPlrTwoPlaceShips">Player 2: Place your ships</string>
    <string name="key_strMustPlaceShipOnOwnBoard">You must place the ship on your own board!</string>
    <string name="key_strCantPlaceThere">Can\'t place ship there!</string>
    <string name="key_strPlrOneShoot">Player 1: Shoot</string>
    <string name="key_strPlrTwoShoot">Player 2: Shoot</string>
    <string name="key_strPlrOnePlaceShips">Player 1: Place your ships</string>
    <string name="key_strSunkGunboat">You sunk a gunboat!</string>
    <string name="key_strSunkDestroyer">You sunk a destroyer!</string>
    <string name="key_strSunkBattleship">You sunk a battleship!</string>
    <string name="key_strSunkCarrier">You sunk an aircraft carrier!</string>
    <string name="key_strGunboatSunk">Your gunboat was sunk!</string>
    <string name="key_strDestroyerSunk">Your destroyer was sunk!</string>
    <string name="key_strBattleshipSunk">Your battleship was sunk!</string>
    <string name="key_strCarrierSunk">Your carrier was sunk!</string>
    <string name="key_strCantShoot">Can\'t shoot there!</string>
    <string name="key_strGameOver">Game Over!</string>
    <string name="key_strCongratsOne">Congratulations to player 1 for winning!</string>
    <string name="key_strCongratsTwo">Congratulations to player 2 for winning!</string>
    <string name="key_strHumanWon">You defeated the computer, congratulations!</string>
    <string name="key_strComputerWon">The computer defeat you, better luck next time!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="key_strBotLosses">Losses against computer: %1$d</string>
    <string name="key_strLongPressAfterPlace">Long press is only used for placing ships vertically!</string>
    <string name="key_strBotWins">Wins against computer: %1$d</string>
    <string name="key_strWLR">Win/loss ratio: %1$f</string>
</resources>