<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StatsActivity">

    <TextView
        android:id="@+id/tvWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/key_strBotWins"
        app:layout_constraintBottom_toTopOf="@+id/tvLosses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvLosses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/key_strBotLosses"
        app:layout_constraintBottom_toTopOf="@+id/tvRatio"
        app:layout_constraintStart_toStartOf="@+id/tvWins"
        app:layout_constraintTop_toBottomOf="@+id/tvWins" />

    <TextView
        android:id="@+id/tvRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_strWLR"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="@+id/tvLosses"
        app:layout_constraintTop_toBottomOf="@+id/tvLosses" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/key_btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>